# VoiceBot

./: .gitignore  DOCKER_README.md  Makefile  docker-compose.yml  start.sh
.ai/api/: api-plan.md
.ai/backend_implementation_plans/: base-discord-functions-implementation-plan.md  create-voice-implementation-plan.md  improve-prompt-implementation-plan.md  play-audio-implementation-plan.md
.ai/db/: db-plan-summary.md  db-plan.md
.ai/frontend_implementation_plans/: bot-view-implementation-plan.md  voices-view-implementation-plan.md
.ai/implementation_plans/: bot-status-implementation-plan.md  get-voices-implementation-plan.md
.ai/prd/: prd.md  prd_conversation_summary.md
.ai/summaries/: ui-plan-summary.md
.ai/ui/: ui-plan.md
.cursor/rules/: base-python-rules.mdc  elevenlabs.mdc  shared.mdc
backend/: .dockerignore  .env.example  Dockerfile  app.db  list_models.py  main.py  pyproject.toml
backend/app/: models.py
backend/app/api/: discord_bot_router.py  prompt_router.py  voices.py
backend/app/config/: prompt_instructions.py
backend/app/config/prompts/: generate-sample-text-instructions.md  improve-prompt-instructions.md  translate-voice-description-instructions.md
backend/app/services/: discord_bot_service.py  elevenlabs_client.py  error_logging.py  prompt_service.py  voice_service.py
backend/db/: db.py  migrations.py
backend/tests/services/: __init__.py  test_discord_bot_service.py
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  types.ts
(+32 files in other folders)
