[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["domin <domin.dober@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
elevenlabs = "^2.6.0"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
openai = "^1.93.0"
discord-py = "^2.4.0"
pytest = "^8.4.1"
python-multipart = "^0.0.20"
pynacl = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
